--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,14 +15,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 40vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-  margin-bottom: 40px;
+  color: white !important;
+}
+.App-header a {
+  color: white !important;
+  text-decoration: none;
 }
 
 .App-link {
